crates/syntax/src/snapshots/syntax__syntax__grammar_tests__declaration_happy_test_source.snap
---
source: crates/syntax/src/syntax.rs
expression: string_syntax
---
"{\n            var nout = nbits((2**n -1)*ops);\n            signal input in[ops][n];\n            signal output out[nout];\n        \n            var lin = 0;\n            var lout = 0;\n        \n            var k;\n            var j;\n        \n            var e2;\n        \n            e2 = 1;\n            for (k=0; k<n; k++) {\n                for (j=0; j<ops; j++) {\n                    lin += in[j][k] * e2;\n                }\n                e2 = e2 + e2;\n            \n                e2 = 1;\n                for (k=0; k<nout; k++) {\n                    out[k] <-- (lin >> k) & 1;\n            \n                    // Ensure out is binary\n                    out[k] * (out[k] - 1) === 0;\n            \n                    lout += out[k] * e2;\n            \n                    e2 = e2+e2;\n                }\n            \n                // Ensure the sum;\n            \n                lin === lout;\n            }\n    }"
