crates/syntax/src/snapshots/syntax__syntax__grammar_tests__statement_happy_test_statements.snap
---
source: crates/syntax/src/syntax.rs
expression: statements
---
- "for(var i = 0; i < N-1; i++){\n                comp[i] = Multiplier2();\n            }"
- "comp[0].in1 <== in[0];"
- "comp[0].in2 <== in[1];"
- "for(var i = 0; i < N-2; i++){\n                comp[i+1].in1 <== comp[i].out;\n                comp[i+1].in2 <== in[i+2];\n\n            }"
- "out <== comp[N-2].out;"
- "while (out) {\n                for(var i = 0; i < N-1; i++){\n                    comp[i] = Multiplier2();\n                }\n            }"
- assert(comp);
- "log(\"Print something...\", out);"
- "if (1 < 2) {\n                log(\"Match...\", 1 < 2);\n            } else {\n                log(\"Does not match...\", 1 < 2);\n            }"
- return out + comp;
