crates/syntax/src/snapshots/syntax__syntax__grammar_tests__template_happy_test_statements.snap
---
source: crates/syntax/src/syntax.rs
expression: statements
---
- "[expect Semicolon but got Identifier"
- Nexpect Semicolon but got RBracket
- "];"
- "[expect Semicolon but got Identifier"
- Nexpect Semicolon but got Sub
- "-1expect Semicolon but got RBracket"
- "];"
- for(var i = 0; i < N-1; iexpect RParen but got UnitInc++)expect Semicolon but got LCurly
- "{\n                comp[i] = Multiplier2(expect Identifier but got RParen);\n                }"
